force-app/main/default/objects/iBirds_Student__c/iBirds_Student__c.object-meta.xml
<CustomObject>
    <label>iBirds Student</label>
    <nameField>
        <displayFormat>SS-{000}</displayFormat>
        <label>iBirds Student iD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iBirds Student</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>