force-app/main/default/objects/iBirds_Student__c/fields/Partner_name__c.field-meta.xml
<CustomField>
    <fullName>Partner_name__c</fullName>
    <label>Partner name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>