force-app/main/default/objects/iBirds_Student__c/fields/Std__c.field-meta.xml
<CustomField>
    <fullName>Std__c</fullName>
    <label>Std</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Class</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>