force-app/main/default/objects/iBirds_Student__c/fields/Student_Contact__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact__c</fullName>
    <label>Student Contact</label>
    <type>Phone</type>
</CustomField>