force-app/main/default/objects/iBirds_Student__c/fields/Student_DOB__c.field-meta.xml
<CustomField>
    <fullName>Student_DOB__c</fullName>
    <label>Student DOB</label>
    <type>Date</type>
</CustomField>