force-app/main/default/objects/iBirds_Student__c/fields/Student_Mail_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Mail_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Student Mail Id</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>