force-app/main/default/objects/iBirds_Student__c/recordTypes/College.recordType-meta.xml
<RecordType>
    <fullName>College</fullName>
    <active>true</active>
    <label>College</label>
</RecordType>