force-app/main/default/objects/iBirds_Student__c/recordTypes/School.recordType-meta.xml
<RecordType>
    <fullName>School</fullName>
    <active>true</active>
    <label>School</label>
</RecordType>