force-app/main/default/objects/iBirds_Student__c/validationRules/Check_Email_Without_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Email_Without_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Student_Mail_Id__c  &lt;&gt; &quot;&quot;, Student_Name__c == &quot;&quot;,false)</errorConditionFormula>
    <errorDisplayField>Student_Name__c</errorDisplayField>
    <errorMessage>Email cant send without name</errorMessage>
</ValidationRule>