force-app/main/default/objects/iBirds_Student__c/validationRules/Empty_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_DOB</fullName>
    <active>true</active>
    <description>Date of Birth of student should not be empty</description>
    <errorConditionFormula>TEXT(Student_DOB__c) == &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Student_DOB__c</errorDisplayField>
    <errorMessage>Date Of Birth can not be empty</errorMessage>
</ValidationRule>