force-app/main/default/objects/iBirds_Student__c/validationRules/Partner_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Name_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF( isMarried__c , Partner_name__c ==&quot;&quot;,false)</errorConditionFormula>
    <errorDisplayField>Partner_name__c</errorDisplayField>
    <errorMessage>Partner Name is mandatory</errorMessage>
</ValidationRule>